- Recent riles are displayed on upload page - Captcha is generated when navigating to /captchaPage